2016-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Limit the number of XPM colors and
	assure array initialization.  Fixes bad behavior with a sample
	file provided by Hanno Böck on May 6, 2016 with subject "Invalid
	free in ReadXPMImage".

	* coders/pcx.c (ReadPCXImage): Limit the number of PCX image
	planes allowed.  Fixes an unreasonable memory allocation in a
	sample file provided by Hanno Böck on May 5, 2016.

2016-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Gnuplot files are inherently insecure.
	Remove delegates support for reading them.  Reported by John
	Lightsey via private email.
	Added -dSAFER to Ghostscript invokations in delegates.mgk for more
	secure execution.  Reported by David Chan via SourceForge bug
	"#386 ghostscript delegates should explicitly use -dSAFER.".

	* magick/constitute.c (ReadImages): Avoid possible infinite
	ReadImage() recursion.

2016-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Fix divide by zero
	exception encountered while reading file "sigfpe.svg" posted by
	Gustavo Grieco on May 1, 2016 to the oss-security mailing list
	with subject "CVE request: DoS in multiple versions of
	GraphicsMagick".
	(DrawDashPolygon): Fix endless loop problem caused by negative
	stroke-dasharray arguments.  Resolves problem observed while
	reading file "circular.svg" posted by Gustavo Grieco on May 1,
	2016 to the oss-security mailing list with subject "CVE request:
	DoS in multiple versions of GraphicsMagick".

	* magick/import.c (ImportViewPixelArea): Fix assertion while
	reading TIFF file gkkxrilssm.tiff.105123337066 provided by Gustavo
	Grieco.

2016-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/locale.c (ReadLOCALEImage): Make sure to close blob
	before returning.

	* coders/svg.c ("C"): Provide a hack work-around for double-quoted
	font-family argument.
