@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160506"
-#define public MagickPackageReleaseDate "snapshot-20160506"
+#define public MagickPackageVersionAddendum ".020160507"
+#define public MagickPackageReleaseDate "snapshot-20160507"
