@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-05-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/mvg.c (RegisterMVGImage): Do not auto-detect MVG format
+based on file extension.  MVG files can then only be read by
+adding a &quot;MVG:&quot; prefix to the file name. There is already no
+auto-detection of MVG based on content.</li>
+</ul>
+</blockquote>
 <p>2016-05-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
